# harmonium

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  todo  todolist
.github/: dependabot.yml  integration.yml
.github/workflows/: build_docs.yml  check.yaml  check.yml  create_docs_gh_pages.yml  integration.yml  r_check.yml  update_gh_pages.yml
_docs/: _quarto.yml  index.qmd  styles.css
_docs/contents/: harray.qmd  harrayaudio.qmd  haudioop.qmd  haudiosink.qmd  hdatatype.qmd  hdecodedaudio.qmd  hdecoderstream.qmd  hfft.qmd  hfftplanner.qmd  hfile.qmd  hinterpolationtype.qmd  hmetadatatype.qmd  hpolynomialdegree.qmd  hrealfft.qmd  hrealfftplanner.qmd  hresampler.qmd  hresamplertype.qmd  hsincinterpolationparameters.qmd  hstft.qmd  hwindow.qmd  hwindowtype.qmd
_docs/docs/: harray.qmd  hmetadatatype.qmd  hpolynomialdegree.qmd  hresampler.qmd  hresamplertype.qmd
docs/: about.html  index.html  search.json
docs/contents/: harray.html  harrayaudio.html  haudioop.html  haudiosink.html  hdatatype.html  hdecodedaudio.html  hdecoderstream.html  hfft.html  hfftplanner.html  hfile.html  hinterpolationtype.html  hmetadatatype.html  hpolynomialdegree.html  hrealfft.html  hrealfftplanner.html  hresampler.html  hresamplertype.html  hsincinterpolationparameters.html  hstft.html  hwindow.html  hwindowtype.html
docs/docs/: harray.html  haudio.html  haudiosink.html  hconfig.html  hdatatype.html  hmatrix.html  hmetadatatype.html  hpolynomialdegree.html  hresampler.html  hresamplertype.html  hwindow.html
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
docs/site_libs/quarto-html/: quarto-syntax-highlighting.css
harmonium-core/: Cargo.toml
harmonium-core-io-dsp/: Cargo.toml
harmonium-core-io-dsp/src/: audio_loading.rs  decoded_audio_ndarray.rs  errors.rs  lib.rs  stream.rs  stream_ndarray.rs
harmonium-core/src/: array.rs  audioop.rs  comparison.rs  configs.rs  conversions.rs  errors.rs  fmt.rs  from.rs  haudioop.rs  lib.rs  structs.rs  structsbackup.rs  transformations.rs
harmonium-fft/: Cargo.toml
harmonium-fft/src/: fft.rs  lib.rs  stft.rs
harmonium-io/: Cargo.toml
harmonium-io/src/: decode.rs  decoded_audio_ndarray.rs  lib.rs  play.rs  stream_ndarray.rs
harmonium-resample/: Cargo.toml
harmonium-resample/src/: lib.rs  resample.rs  resample2.rs  resample_backup.rs
harmonium-stft/: Cargo.toml
harmonium-stft/src/: lib.rs  stft.rs
harmonium-window/: Cargo.toml
harmonium-window/src/: windows.rs
r-harmonium/: .Rbuildignore  .fft_bench.R  .testtest.R  DESCRIPTION  NAMESPACE  README.md  fft_bench.R  test_resample.R  tests_fn.R  testtest.R
r-harmonium/R/: 000-wrappers.R  arrow.R  config.R  extendr-wrappers.R  hconfig.R  hdocs.R  structs.R  wrappers.R  zzz.R
r-harmonium/docs/: _quarto.yml  index.qmd
r-harmonium/docs/_site/: about.html  index.html
r-harmonium/docs/_site/docs/: harray.html
r-harmonium/docs/docs/: harray.qmd  haudio.qmd  haudiosink.qmd  hdatatype.qmd  hmatrix.qmd  hmetadatatype.qmd  hpolynomialdegree.qmd  hresampler.qmd  hresamplertype.qmd  hwindow.qmd
r-harmonium/docs/docswebsite/: _quarto.yml  index.qmd
r-harmonium/docs/docswebsite/_site/: about.html  index.html  search.json
r-harmonium/docs/docswebsite/_site/docs/: harray.html  haudiosink.html  hdatatype.html
r-harmonium/docs/docswebsite/_site/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
r-harmonium/docs/docswebsite/docs/: harray.qmd  haudio.qmd  hconfig.qmd  hdatatype.qmd  hmatrix.qmd  hresamplertype.qmd
r-harmonium/inst/tinytest/: test_arrow_conversions.R  test_as_mono.R  test_configs.R  test_conversions.R  test_harraydynamic.R  test_haudiodynamic.R  test_haudiosink.R  test_hmatrixdynamic.R  test_mean_cols.R  test_resample.R  test_slice.R  text_hfile.R
r-harmonium/man/: hconfig.Rd  nanoarrow.Rd  print.HArray.Rd  print.HAudio.Rd  print.HDataType.Rd  print.HMatrix.Rd  print.HMetadataType.Rd  print.HResampler.Rd  print.HResamplerType.Rd
r-harmonium/src/: .gitignore  Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  harmonium-win.def  init.c
r-harmonium/src/rust/: Cargo.toml  api.h
r-harmonium/src/rust/src/: conversions.rs  errors.rs  generate_r_docs.rs  harray.qmd  harray.rs  harray_test.rs  harraydynamic.rs  harrayr.rs  haudio.rs  haudiodynamic.rs  haudioop.rs  haudiosink.rs  hconfig.rs  hdatatype.rs  herror.rs  hfft.rs  hfile.rs  hinterpolationparams.rs  hinterpolationtype.rs  hmatrix.rs  hmatrixdynamic.rs  hmetadatatype.rs  hpolynomialdegree.rs  hresampler.rs  hresampler2.rs  hresamplertype.rs  hsincinterpolationparameters.rs  hsincinterpolationparams.rs  hstft.rs  hwindow.rs  hwindowtype.rs  lib.rs  partialeq.rs  r_docs.rs
r-harmonium/src/rust/src/_docs/: _quarto.yml  index.qmd
r-harmonium/src/rust/src/_docs/contents/: harray.qmd  haudioop.qmd  haudiosink.qmd  hdatatype.qmd  hdecodedaudio.qmd  hdecoderstream.qmd  hfft.qmd  hfile.qmd  hinterpolationtype.qmd
r-harmonium/src/rust/src/docs/: about.html  index.html  search.json
r-harmonium/src/rust/src/docs/contents/: harray.html  haudioop.html  haudiosink.html  hdatatype.html  hdecodedaudio.html  hdecoderstream.html  hfft.html  hfile.html  hinterpolationtype.html
r-harmonium/src/rust/src/docs/site_libs/bootstrap/: bootstrap.min.css
r-harmonium/src2/: Makevars  Makevars.win  entrypoint.c
r-harmonium/src2/rust/: Cargo.toml
r-harmonium/src2/rust/.cargo/: config.toml
r-harmonium/src2/rust/src/: datatype.rs  harraydynamic.rs  haudio.rs  haudiodynamic.rs  haudiosink.rs  hfile.rs  hmatrix.rs  hmatrixdynamic.rs  lib.rs  partialeq.rs  windows.rs
r-harmonium/tests/: testthat.R  tinytest.R
r-harmonium/tests/testthat/: test_arrow_conversions.R  test_as_mono.R  test_configs.R  test_conversions.R  test_db_to_amplitude.R  test_db_to_power.R  test_export.R  test_harray.R  test_haudio.R  test_haudiosink.R  test_hconfig.R  test_hfft.R  test_hfftplanner.R  test_hfile.R  test_hmatrix.R  test_hresampler.R  test_hstft.R  test_mean_cols.R  test_slice.R  test_to_mono.R
testfiles/: readme
