[workspace]
resolver = "2"
members = [
	"harmonium-core",
	"harmonium-io",
	"harmonium-fft",
	"harmonium-resample",
	"harmonium-window",
]

[workspace.dependencies]
rustfft = { version = "6.2", default-features = false, features = ["avx", "sse", "neon"] }
realfft = { version = "3.3", default-features = false } 
rubato = { version = "0.15.0", default-features = false, features = ["fft_resampler"] }
ndarray = { version = "0.16", default-features = false }
symphonia = { version = "0.5.4", default-features = false }
rodio = { version = "0.19.0", default-features = false }
num-complex = { version = "0.4", default-features = false } 
num-traits = { version = "0.2", default-features = false }

harmonium-core = { path = "harmonium-core", default-features = false }
harmonium-io = { path = "harmonium-io", default-features = false }
harmonium-fft = { path = "harmonium-fft", default-features = false }
harmonium-resample = { path = "harmonium-resample", default-features = false }
harmonium-window = { path = "harmonium-window", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
debug = 1 # less precise locations. Reduce size of target dir.

[profile.dev.package."*"]
debug = false # no debug symbols for deps. Reduce size of target dir.
opt-level = 2 # makes their code smaller too. Reduce size of target dir.

# https://rust-lang.github.io/packed_simd/perf-guide/target-feature/rustflags.html
# Using native as the CPU model will cause Rust to generate and optimize code for the CPU running the compiler. It is useful when building programs which you plan to only use locally. This should never be used when the generated programs are meant to be run on other computers, such as when packaging for distribution or cross-compiling.
# "-Ctarget-cpu=native"
