[package]
name = "harmonium-core-io-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
ndarray = "0.15.6"
arrow2 = "0.14.2"
symphonia = { version = "0.5.1", features = ["aac", "alac", "isomp4", "mp3"] }
rubato = "0.12"

[features]
default = ["arrow"]
ndarray = []
arrow = []

