[package]
name = "harmonium-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
arrow2 = "0.17.2"
rubato = "0.14"
comfy-table = "7.0"
ndarray = "0.15.6"
symphonia = { version = "*", default-features = false }
rodio = { git = "https://github.com/RustAudio/rodio.git", rev = "9674ea5", default-features = false }

[features]
default = ["arrow"]
arrow = []

