[package]
name = "harmonium-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true }
arrow2 = { workspace = true }
rubato = { workspace = true }
comfy-table = { workspace = true }
ndarray = { workspace = true }
symphonia = { workspace = true }
rodio = { workspace = true }

[features]
default = ["arrow"]
arrow = []

