[package]
name = "harmonium-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true }
num-complex = { workspace = true }
rubato = { workspace = true }
ndarray = { workspace = true }
symphonia = { workspace = true }
rodio = { workspace = true }

