[package]
name = "harmonium-fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harmonium-core = { path = "../harmonium-core" }
harmonium-io = { path = "../harmonium-io" }
arrow2 = { workspace = true }
rustfft = { workspace = true }
cached = { workspace = true }

[features]
default = ["arrow"]
arrow = []

