[package]
name = "harmonium-fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harmonium-core = { path = "../harmonium-core" }
harmonium-io = { path = "../harmonium-io" }
rustfft = { workspace = true }
realfft = { workspace = true }
cached = { workspace = true }
ndarray = { workspace = true }

