[package]
name = "harmonium-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harmonium-core = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true }
symphonia = { workspace = true }
rodio = { workspace = true }

[features]
default = ["symphonia-default"]

# Symphonia features
aac = ["symphonia/aac"]
adpcm = ["symphonia/adpcm"]
alac = ["symphonia/alac"]
flac = ["symphonia/flac"]
isomp4 = ["symphonia/isomp4"]
mkv = ["symphonia/mkv"]
mp1 = ["symphonia/mp1"]
mp2 = ["symphonia/mp2"]
mp3 = ["symphonia/mp3"]
ogg = ["symphonia/ogg"]
pcm = ["symphonia/pcm"]
vorbis = ["symphonia/vorbis"]
wav = ["symphonia/wav"]

# MPEG audio codecs
mpa = ["symphonia/mp1", "symphonia/mp2", "symphonia/mp3"]

# Enable all supported codecs
all-codecs = [
    "symphonia/aac",
    "symphonia/adpcm",
    "symphonia/alac",
    "symphonia/flac",
    "symphonia/mp1",
    "symphonia/mp2",
    "symphonia/mp3",
    "symphonia/pcm",
    "symphonia/vorbis",
]

# Enable all supported formats
all-formats = [
    "symphonia/isomp4",
    "symphonia/mkv",
    "symphonia/ogg",
    "symphonia/wav"
]

# Enable all supported codecs and formats
all = ["all-codecs", "all-formats"]

# Only royalty-free open standard codecs and formats are enabled by default.
symphonia-default = ["adpcm", "flac", "mkv", "ogg", "pcm", "vorbis", "wav"]

# SIMD support.
opt-simd-sse = ["symphonia/opt-simd-sse"]
opt-simd-avx = ["symphonia/opt-simd-avx"]
opt-simd-neon = ["symphonia/opt-simd-neon"]

# Enable all SIMD support.
opt-simd = [
    "opt-simd-sse",
    "opt-simd-avx",
    "opt-simd-neon",
]

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true
