[package]
name = "harmonium-resample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harmonium-core = { path = "../harmonium-core" }
rubato = { workspace = true }
arrow2 = { workspace = true }
num-traits = { workspace = true }
