[package]
name = "harmonium-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harmonium-core = { workspace = true }
num-traits = { workspace = true }
rustfft = { workspace = true }
realfft = { workspace = true }
ndarray = { workspace = true }
