[package]
name = 'r-harmonium'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'harmonium'

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
# prevents package from thinking it's in the workspace

[dependencies]
extendr-api = { git = "https://github.com/extendr/extendr", rev = "983fd58"}
#harmonium-core = { path = "../../../harmonium-core" }
#harmonium-io = { path = "../../../harmonium-io" }
#harmonium-resample = { path = "../../../harmonium-resample" }
#harmonium-fft = { path = "../../../harmonium-fft" }
#harmonium-window = { path = "../../../harmonium-window" }
harmonium-core = { git = "https://github.com/daniellga/harmonium.git" }
harmonium-io = { git = "https://github.com/daniellga/harmonium.git" }
harmonium-resample = { git = "https://github.com/daniellga/harmonium.git" }
harmonium-fft = { git = "https://github.com/daniellga/harmonium.git" }
harmonium-window = { git = "https://github.com/daniellga/harmonium.git" }
arrow2 = "0.17.2"
rubato = "0.14"

[[bin]]
name = "generate_r_docs"
path = "src/generate_r_docs.rs"

[profile.dev]
debug = 1 # less precise locations. Reduce size of target dir.

[profile.dev.package."*"]
debug = false # no debug symbols for deps. Reduce size of target dir.
opt-level = 2 # makes their code smaller too. Reduce size of target dir.
