[package]
name = 'r-harmonium'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'harmonium'

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind" # otherwise savvy craches R when panic.

[workspace]
# prevents package from thinking it's in the workspace.

[dependencies]
harmonium-core = { path = "../../../harmonium-core" }
harmonium-io = { path = "../../../harmonium-io" }
harmonium-resample = { path = "../../../harmonium-resample" }
harmonium-fft = { path = "../../../harmonium-fft" }
harmonium-window = { path = "../../../harmonium-window" }
#harmonium-core = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-io = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-resample = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-fft = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-window = { git = "https://github.com/daniellga/harmonium.git" }
rubato = "0.15.0"
ndarray = "0.15.6"
num-complex = { version = "0.4", features = ["bytemuck"] }
savvy = { version = "0.6.1", features = ["complex"] }

[profile.dev]
debug = 1 # less precise locations. Reduce size of target dir.

[profile.dev.package."*"]
debug = false # no debug symbols for deps. Reduce size of target dir.
opt-level = 2 # makes their code smaller too. Reduce size of target dir.

