[package]
name = 'r-harmonium'
edition = '2021'
version = '0.2.0'

[lib]
crate-type = [ 'staticlib' ]
name = 'harmonium'

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind" # otherwise savvy crashes R when panic.

[workspace]
# prevents package from thinking it's in the workspace.

[dependencies]
harmonium-core = { path = "../../../harmonium-core" }
harmonium-io = { path = "../../../harmonium-io" }
harmonium-resample = { path = "../../../harmonium-resample" }
harmonium-fft = { path = "../../../harmonium-fft" }
harmonium-window = { path = "../../../harmonium-window" }
#harmonium-core = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-io = { git = "https://github.com/daniellga/harmonium.git", features = ["all", "opt-simd"] }
#harmonium-resample = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-fft = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-window = { git = "https://github.com/daniellga/harmonium.git" }
rubato = { version = "0.15.0", default-features = false, features = ["fft_resampler"] }
rustfft = { version = "6.2", default-features = false, features = ["avx", "sse", "neon"] }
realfft = { version = "3.3", default-features = false } 
ndarray = { version = "0.16", default-features = false }
num-complex = { version = "0.4", default-features = false } 
savvy = { version = "0.6.5", default-features = false, features = ["complex"] }

[profile.dev]
debug = 1 # less precise locations. Reduce size of target dir.

[profile.dev.package."*"]
debug = false # no debug symbols for deps. Reduce size of target dir.
opt-level = 2 # makes their code smaller too. Reduce size of target dir.

