[package]
name = 'harmonium_io'
version = '0.1.0'
edition = '2021'

[workspace]
# prevents package from thinking it's in the workspace

[lib]
crate-type = [ 'staticlib' ]
name = 'harmonium_io'

[profile.release]
opt-level = 3
lto = true
codegen-units=1

[dependencies]
extendr-api = { git = "https://github.com/extendr/extendr", rev = "8176867"}
harmonium-core = { path = "../../../harmonium-core" }
harmonium-io = { path = "../../../harmonium-io" }
harmonium-resample = { path = "../../../harmonium-resample" }
harmonium-fft = { path = "../../../harmonium-fft" }
harmonium-window = { path = "../../../harmonium-window" }
#harmonium-core = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-io = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-resample = { git = "https://github.com/daniellga/harmonium.git" }
#harmonium-fft = { git = "https://github.com/daniellga/harmonium.git" }
arrow2 = "0.17"
rubato = "*"
